# vim: filetype=meson

option(
  'doc-gen',
  type : 'boolean',
  value : false,
  description : 'Generate documentation',
)

option(
  'unit-tests',
  type : 'boolean',
  value : true,
  description : 'Build unit tests',
)

option(
  'bindings',
  type : 'boolean',
  value : true,
  description : 'Build language bindings (e.g. Perl)',
)

option(
  'benchmarks',
  type : 'boolean',
  value : false,
  description : 'Build benchmarks (requires gbenchmark)',
)

# Emulating 'auto' options, since we don't want auto_features to affect this
# and there's no other way of conditionally defaulting the value.
option(
  'pch',
  type : 'combo',
  choices : [ 'auto', 'enabled', 'disabled' ],
  value : 'auto',
  description : 'Use C++ Precompiled Headers to speed up compilation',
)
